# optix_renderer

./: .gitignore  CMakeLists.txt  hostCode.cpp  hostCode.hpp  ltc_ratio_estimator.py  save.py  save_images.py
cuda_include/: common.cuh  deviceCode.cuh  frostbite.cuh  ggx_ndf.cuh  ggx_vndf.cuh  helper_math.cuh  hit_miss.cuh  lcg_random.cuh  material.cuh  utils.cuh
cuda_include/ltc/: ltc_utils.cuh  polygon_utils.cuh
cuda_include/path/: path.cuh  path2.cuh
cuda_include/ratio/: ratio.cuh
cuda_src/: deviceCode.cu
include/: CMakeLists.txt  Model.h  common.h  scene.cpp  scene.h  tiny_obj_loader.h  viewer.hpp
include/cuda_headers/: common.cuh
include/stb/: CMakeLists.txt  stb_image.h
libs/: .gitignore  ReadME.md
ltc_ratio_estimator/: CMakeLists.txt  ReadME.md
src/: Model.cpp  deviceCode.cu  deviceCode.cuh  deviceCode.h  hostCode.cpp  scene.cpp  viewer.hpp
